[package]
name = "swayhide"
version = "0.1.0"
authors = ["NomisIV <simon@nomisiv.com>"]
edition = "2018"
description = "A window swallower for swaywm"
repository = "https://github.com/NomisIV/swayhide/"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [ "sway", "swayipc", "window-swallower", "hide" ]
categories = [ "command-line-utilities" ]

[dependencies]
swayipc = "2.7"
